--- a/build.xml
+++ b/build.xml
@@ -30,6 +30,9 @@
     <!-- ============================================  -->
     <target name="build" depends="prepare,phploc">
         <echo msg="Copying files to build directory..." />
+
+        <copy file="*" tofile="./build/" />
+
     </target>
 
 
