--- a/dev/build.xml
+++ b/dev/build.xml
@@ -22,7 +22,7 @@
          <tstamp>
            <format property="check.date.time" pattern="%Y%m%d-%H%M%S" locale="en_US"/>
          </tstamp>
-         <phploc reportType="txt" reportName="${check.date.time}-report" reportDirectory="../build">
+         <phploc reportType="txt" reportName="${check.date.time}-report" reportDirectory="../docs">
            <fileset dir="../src">
              <include name="**/*.php" />
              <include name="*.php" />
