--- a/dev/build.xml
+++ b/dev/build.xml
@@ -8,12 +8,6 @@
     <target name="prepare">
         <echo msg="Making directory build" />
         <mkdir dir="../build" />
-        <mkdir dir="../packages" />
-        <copy todir="../build" >
-          <fileset defaultexcludes="false" expandsymboliclinks="true" dir="../src">
-            <include name="**/*" />
-          </fileset>
-        </copy>
     </target>
 
 
@@ -22,7 +16,7 @@
          <tstamp>
            <format property="check.date.time" pattern="%Y%m%d-%H%M%S" locale="en_US"/>
          </tstamp>
-         <phploc reportType="txt" reportName="${check.date.time}-report" reportDirectory="../docs">
+         <phploc reportType="txt" reportName="${check.date.time}-report" reportDirectory="../build">
            <fileset dir="../src">
              <include name="**/*.php" />
              <include name="*.php" />
@@ -44,8 +38,8 @@
     <target name="dist" depends="build">
         <echo msg="Creating archive..." />
 
-        <tar destfile="../packages/codeine.tar.gz" compression="gzip">
-            <fileset dir="../build">
+        <tar destfile="../build/codeine.tar.gz" compression="gzip">
+            <fileset dir="../src">
                 <include name="*" />
             </fileset>
         </tar>
