--- a/dev/build.xml
+++ b/dev/build.xml
@@ -2,21 +2,14 @@
 
 <project name="FooBar" default="dist">
 
-    <!-- ============================================  -->
-    <!-- Target: prepare                               -->
-    <!-- ============================================  -->
     <target name="prepare">
         <echo msg="Making directory build" />
         <mkdir dir="../build" />
     </target>
 
-
     <taskdef name="phploc" classname="phing.tasks.my.PHPLocTask" />
        <target name="phploc">
-         <tstamp>
-           <format property="check.date.time" pattern="%Y%m%d-%H%M%S" locale="en_US"/>
-         </tstamp>
-         <phploc reportType="txt" reportName="${check.date.time}-report" reportDirectory="../build">
+         <phploc reportType="txt" reportName="phploc" reportDirectory="../build">
            <fileset dir="../src">
              <include name="**/*.php" />
              <include name="*.php" />
@@ -24,18 +17,11 @@
          </phploc>
     </target>
 
-    <!-- ============================================  -->
-    <!-- Target: build                                 -->
-    <!-- ============================================  -->
     <target name="build" depends="prepare,phploc">
-        <echo msg="Copying files to build directory..." />
+        <echo msg="Building..." />
     </target>
 
-
-    <!-- ============================================  -->
-    <!-- (DEFAULT)  Target: dist                       -->
-    <!-- ============================================  -->
-    <target name="dist" depends="build">
+    <target name="tgz" depends="build">
         <echo msg="Creating archive..." />
 
         <tar destfile="../build/codeine.tar.gz" compression="gzip">
@@ -45,5 +31,22 @@
         </tar>
 
         <echo msg="Files copied and compressed in build directory OK!" />
+    </target>
+
+    <target name="deb" depends="build">
+        <echo msg="Creating debian package..." />
+        <mkdir dir="../codeine-6.0~bergstein_all/usr/share/codeine" />
+
+        <copy todir="../codeine-6.0~bergstein_all/usr/share/codeine">
+            <fileset dir="../src">
+                <include name="*" />
+            </fileset>
+        </tar>
+
+        <echo msg="Files copied and compressed in build directory OK!" />
+    </target>
+
+    <target name="dist" depends="tgz,deb">
+
     </target>
 </project>
