--- a/dev/build.xml
+++ b/dev/build.xml
@@ -43,6 +43,11 @@
             </fileset>
         </copy>
 
+        <copy todir="../codeine-6.0~bergstein_all/">
+            <fileset dir="../debian">
+                <include name="*" />
+            </fileset>
+        </copy>
 
     </target>
 
