--- a/dev/build.xml
+++ b/dev/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project name="FooBar" default="dist">
+<project name="Codeine" default="dist">
 
     <target name="prepare">
         <echo msg="Making directory build" />
