--- a/dev/build.xml
+++ b/dev/build.xml
@@ -3,13 +3,13 @@
 <project name="Codeine" default="dist">
 
     <target name="prepare">
-        <echo msg="Making directory build" />
-        <mkdir dir="../build" />
+        <echo msg="Making directory dist" />
+        <mkdir dir="../dist" />
     </target>
 
     <taskdef name="phploc" classname="phing.tasks.my.PHPLocTask" />
        <target name="phploc">
-         <phploc reportType="txt" reportName="phploc" reportDirectory="../build">
+         <phploc reportType="txt" reportName="phploc" reportDirectory="../dist">
            <fileset dir="../src">
              <include name="**/*.php" />
              <include name="*.php" />
@@ -24,7 +24,7 @@
     <target name="tgz" depends="build">
         <echo msg="Creating archive..." />
 
-        <tar destfile="../build/codeine.tar.gz" compression="gzip">
+        <tar destfile="../dist/codeine.tar.gz" compression="gzip">
             <fileset dir="../src">
                 <include name="*" />
             </fileset>
@@ -50,7 +50,7 @@
             </fileset>
         </copy>
 
-        <exec command="dpkg --build debsrc build/codeine-6.0~bergstein_all.deb" dir="../" />
+        <exec command="dpkg --build debsrc dist/codeine-6.0~bergstein_all.deb" dir="../" />
 
     </target>
 
