--- a/dev/build.xml
+++ b/dev/build.xml
@@ -5,7 +5,7 @@
     <target name="prepare">
         <echo msg="Making directory dist" />
         <mkdir dir="../dist" />
-        <exec command="git tag -l | awk 'NR = 1'" dir="../src" outputPropertY="version"/>
+        <exec command="git tag -l | awk 'NR = 1'" dir="../src" outputProperty="version"/>
 
     </target>
 
