--- a/dev/build.xml
+++ b/dev/build.xml
@@ -5,8 +5,8 @@
     <target name="prepare">
         <echo msg="Making directory dist" />
         <mkdir dir="../dist" />
-        <exec command="git tag -l | awk 'NR = 1'" dir="../src" outputProperty="version"/>
-
+        <exec command="git tag -l | awk 'NR = 1' >> docs/VERSION" dir="../"/>
+        <loadfile property="version" file="../docs/VERSION"/>
     </target>
 
     <taskdef name="phploc" classname="phing.tasks.my.PHPLocTask" />
