--- a/dev/build.xml
+++ b/dev/build.xml
@@ -52,7 +52,7 @@
             </fileset>
         </copy>
 
-        <exec command="dpkg --build debsrc dist/codeine-${version}_all.deb" dir="../" />
+        <exec command="dpkg --build debsrc dist/codeine-${version}-all.deb" dir="../" />
 
     </target>
 
