--- a/dev/build.xml
+++ b/dev/build.xml
@@ -5,7 +5,7 @@
     <target name="prepare">
         <echo msg="Making directory dist" />
         <mkdir dir="../dist" />
-        <exec command="git tag -l | head -c 4 > docs/VERSION" dir="../"/>
+        <exec command="git tag -l | head -n 1 | tr -d '\n' > docs/VERSION" dir="../"/>
         <loadfile property="version" file="../docs/VERSION"/>
     </target>
 
