--- a/etc/codeine/apache2.conf
+++ b/etc/codeine/apache2.conf
@@ -1,11 +1,11 @@
 <VirtualHost *:80>
-   DocumentRoot /var/www/Codeine/src
-   ServerName codeine
+   DocumentRoot /usr/share/codeine/
+   ServerName codeine.local
 
    # This should be omitted in the production environment
    SetEnv Environment development
 
-   <Directory /var/www/Codeine/src>
+   <Directory /usr/share/codeine/>
        Options Indexes MultiViews FollowSymLinks
        AllowOverride All
        Order allow,deny
