--- a/etc/codeine/nginx.conf
+++ b/etc/codeine/nginx.conf
@@ -6,7 +6,7 @@ server {
 server {
     listen  80;
 	server_name codeine.local;
-	root   /usr/share/codeine/public/;
+	root   /usr/share/php/codeine/;
 	index  index.php;
 
 	location / {
@@ -21,9 +21,9 @@ server {
 		fastcgi_pass   127.0.0.1:9000;
 		fastcgi_index  index.php;
 
-		fastcgi_param  DOCUMENT_ROOT    /usr/share/codeine/;
-		fastcgi_param  SCRIPT_FILENAME  /usr/share/codeine/index.php;
-		fastcgi_param  PATH_TRANSLATED  /usr/share/codeine/index.php;
+		fastcgi_param  DOCUMENT_ROOT    /usr/share/php/codeine/;
+		fastcgi_param  SCRIPT_FILENAME  /usr/share/php/codeine/index.php;
+		fastcgi_param  PATH_TRANSLATED  /usr/share/php/codeine/index.php;
 
 		include fastcgi_params;
 		fastcgi_param  QUERY_STRING     $query_string;
