--- a/etc/codeine/apache2.conf
+++ b/etc/codeine/apache2.conf
@@ -1,11 +1,11 @@
 <VirtualHost *:80>
-   DocumentRoot /usr/share/codeine/
+   DocumentRoot /usr/share/php/codeine/
    ServerName codeine.local
 
    # This should be omitted in the production environment
    SetEnv Environment development
 
-   <Directory /usr/share/codeine/>
+   <Directory /usr/share/php/codeine/>
        Options Indexes MultiViews FollowSymLinks
        AllowOverride All
        Order allow,deny
