--- a/dev/build.xml
+++ b/dev/build.xml
@@ -5,13 +5,23 @@
     <target name="prepare">
         <echo msg="Making directory dist" />
         <mkdir dir="../dist" />
+        <mkdir dir="../reports" />
         <exec command="git tag -l | head -n 1 | tr -d '\n' > docs/VERSION" dir="../"/>
         <loadfile property="version" file="../docs/VERSION"/>
     </target>
 
+    <phpunit>
+      <formatter todir="reports" type="xml"/>
+      <batchtest>
+        <fileset dir="tests">
+          <include name="**/*Test*.php"/>
+        </fileset>
+      </batchtest>
+    </phpunit>
+
     <taskdef name="phploc" classname="phing.tasks.my.PHPLocTask" />
        <target name="phploc">
-         <phploc reportType="txt" reportName="phploc-${version}" reportDirectory="../dist">
+         <phploc reportType="txt" reportName="phploc-${version}" reportDirectory="../reports">
            <fileset dir="../src">
              <include name="**/*.php" />
              <include name="*.php" />
@@ -26,7 +36,7 @@
     <target name="tgz" depends="build">
         <echo msg="Creating archive..." />
 
-        <tar destfile="../dist/codeine-${version}.tar.gz" compression="gzip">
+        <tar destFile="../dist/codeine-${version}.tar.gz" compression="gzip">
             <fileset dir="../src">
                 <include name="*" />
             </fileset>
