--- a/dev/build.xml
+++ b/dev/build.xml
@@ -21,7 +21,7 @@
 
     <taskdef name="phploc" classname="phing.tasks.my.PHPLocTask" />
        <target name="phploc">
-         <phploc reportType="txt" reportName="phploc-${version}" reportDirectory="../sreports">
+         <phploc reportType="txt" reportName="phploc-${version}" reportDirectory="../reports">
            <fileset dir="../src">
              <include name="**/*.php" />
              <include name="*.php" />
