--- a/dev/build.xml
+++ b/dev/build.xml
@@ -5,13 +5,13 @@
     <target name="prepare">
         <echo msg="Making directory dist" />
         <mkdir dir="../dist" />
-        <mkdir dir="../reports" />
+        <mkdir dir="reports" />
         <exec command="git tag -l | head -n 1 | tr -d '\n' > docs/VERSION" dir="../"/>
         <loadfile property="version" file="../docs/VERSION"/>
     </target>
 
     <phpunit>
-      <formatter todir="../reports" type="xml"/>
+      <formatter todir="reports" type="xml"/>
       <batchtest>
         <fileset dir="../tests">
           <include name="**/*Test*.php"/>
@@ -21,7 +21,7 @@
 
     <taskdef name="phploc" classname="phing.tasks.my.PHPLocTask" />
        <target name="phploc">
-         <phploc reportType="txt" reportName="phploc-${version}" reportDirectory="../reports">
+         <phploc reportType="txt" reportName="phploc-${version}" reportDirectory="reports">
            <fileset dir="../src">
              <include name="**/*.php" />
              <include name="*.php" />
