--- a/dev/build.xml
+++ b/dev/build.xml
@@ -6,7 +6,7 @@
         <echo msg="Making directory dist" />
         <mkdir dir="../dist" />
         <mkdir dir="reports" />
-        <exec command="git tag -l | head -n 1 | tr -d '\n' > docs/VERSION" dir="../"/>
+        <exec command="git tag -l | tail -n 1 | tr -d '\n' > docs/VERSION" dir="../"/>
         <loadfile property="version" file="../docs/VERSION"/>
     </target>
 
