Entity Engine Small fixes

--- a/etc/apache2/sites-available/development.conf
+++ b/etc/apache2/sites-available/development.conf
@@ -1,11 +1,11 @@
 <VirtualHost *:80>
-   DocumentRoot /usr/share/php/codeine/
-   ServerName codeine.local
+   DocumentRoot /var/www/project/public
+   ServerName project.local
 
    # This should be omitted in the production environment
    SetEnv Environment development
 
-   <Directory /usr/share/php/codeine/>
+   <Directory /var/www/project/public>
        Options Indexes MultiViews FollowSymLinks
        AllowOverride All
        Order allow,deny
