--- a/etc/nginx/sites-available/production.conf
+++ b/etc/nginx/sites-available/production.conf
@@ -1,12 +1,7 @@
 server {
-	listen  80;
-	server_name  www.codeine.local;
-	rewrite ^ http://codeine.local$request_uri? permanent; #301 redirect
-}
-server {
     listen  80;
-	server_name codeine.local;
-	root   /usr/share/php/codeine/;
+	server_name fx.one2team.ru;
+	root   /var/www/ideafx/Public/;
 	index  index.php;
 
 	location / {
@@ -21,16 +16,16 @@ server {
 		fastcgi_pass   127.0.0.1:9000;
 		fastcgi_index  index.php;
 
-		fastcgi_param  DOCUMENT_ROOT    /usr/share/php/codeine/;
-		fastcgi_param  SCRIPT_FILENAME  /usr/share/php/codeine/index.php;
-		fastcgi_param  PATH_TRANSLATED  /usr/share/php/codeine/index.php;
+		fastcgi_param  DOCUMENT_ROOT    /var/www/ideafx/Public/;
+		fastcgi_param  SCRIPT_FILENAME  /var/www/ideafx/Public/index.php;
+		fastcgi_param  PATH_TRANSLATED  /var/www/ideafx/Public/index.php;
 
 		include fastcgi_params;
 		fastcgi_param  QUERY_STRING     $query_string;
 		fastcgi_param  REQUEST_METHOD   $request_method;
 		fastcgi_param  CONTENT_TYPE     $content_type;
 		fastcgi_param  CONTENT_LENGTH   $content_length;
-		# fastcgi_intercept_errors        off;
+		fastcgi_intercept_errors        on;
 		fastcgi_ignore_client_abort     off;
 		fastcgi_connect_timeout 60;
 		fastcgi_send_timeout 180;
