404 page fixes & predictor CSS Variables fix. New parslets. CSS Parser/ Directory listing support Flow.Application fixed.
New Core methods

--- a/src/Options/Code/Flow/Application.json
+++ b/src/Options/Code/Flow/Application.json
@@ -1,12 +1,15 @@
 {
-    "Hooks":
-    {
-        "beforeRun":
-        {
-            "Routing":
-            {
-                "Service": "Code.Flow.Front.Routing",
-                "Method": "Route"
+    "Hooks":{
+        "afterRun":{
+            "Rendering":{
+                "Service":"View",
+                "Method":"Render"
+            }
+        },
+        "on404":{
+            "ErrorPage":{
+                "Service":"Error.404",
+                "Method":"Block"
             }
         }
     }
