--- a/etc/nginx/sites-available/development.conf
+++ b/etc/nginx/sites-available/development.conf
@@ -1,12 +1,7 @@
 server {
-	listen  80;
-	server_name  www.project.local;
-	rewrite ^ http://project.local$request_uri? permanent; #301 redirect
-}
-server {
     listen  80;
-	server_name project.local;
-	root   /var/www/project/public/;
+	server_name codeine.local;
+	root   /usr/share/php/Codeine/;
 	index  index.php;
 
 	location / {
@@ -21,9 +16,9 @@ server {
 		fastcgi_pass   127.0.0.1:9000;
 		fastcgi_index  index.php;
 
-		fastcgi_param  DOCUMENT_ROOT    /var/www/project/public;
-		fastcgi_param  SCRIPT_FILENAME  /var/www/project/public/index.php;
-		fastcgi_param  PATH_TRANSLATED  /var/www/project/public/index.php;
+		fastcgi_param  DOCUMENT_ROOT    /usr/share/php/Codeine/;
+		fastcgi_param  SCRIPT_FILENAME  /usr/share/php/Codeine/index.php;
+		fastcgi_param  PATH_TRANSLATED  /usr/share/php/Codeine/index.php;
 
 		include fastcgi_params;
 		fastcgi_param  QUERY_STRING     $query_string;
