--- a/src/Options/Code/Flow/Application.json
+++ b/src/Options/Code/Flow/Application.json
@@ -7,7 +7,11 @@
             "Audit":
             {
                 "Service": "Security.Auth",
-                "Method": "Audit"
+                "Method": "Audit",
+                "Call":
+                {
+                    "No Auto Register": true
+                }
             },
             "Access":
             {
