--- a/etc/nginx/sites-available/development.conf
+++ b/etc/nginx/sites-available/development.conf
@@ -9,13 +9,6 @@ server {
 		try_files $uri $uri/ /index.php?$uri&$args;
 	}
 
-	location ~* \.(jpg|jpeg|gif|css|png|js|ico|html|woff)$
-	{
-		access_log        off;
-		expires           max;
-		add_header    Cache-Control  public;
-	}
-
     gzip on;
 	gzip_comp_level 6;
     gzip_proxied any;
@@ -66,5 +59,20 @@ server {
 	## Disable viewing .htaccess & .htpassword 
 	location ~ /\.ht {
 		deny  all;
+	}
+
+	location ~ /assets/(.*)\.(jpg|jpeg|gif|png|woff|ttf)$
+    {
+        root /var/www/codeine.local;
+        expires           max;
+		add_header    Cache-Control  public;
+		rewrite ^/assets/(.*)$ /Assets/$1 break;
+    }
+
+    location ~* \.(jpg|jpeg|gif|css|png|js|ico|html|woff|eot)$
+	{
+		access_log        off;
+		expires           max;
+		add_header    Cache-Control  public;
 	}
 }
