--- a/build.xml
+++ b/build.xml
@@ -4,17 +4,8 @@
 
     <import file="build/initialize.xml"/>
     <import file="build/phplint.xml"/>
-    <import file="build/phpcs.xml"/>
-    <import file="build/phploc.xml"/>
-    <import file="build/phpcpd.xml"/>
-    <import file="build/pmd.xml"/>
-    <import file="build/phpunit.xml"/>
-    <import file="build/pdepend.xml"/>
-
-    <import file="build/phpdoc.xml"/>
 
     <import file="build/debian.xml"/>
-    <import file="build/tarball.xml"/>
 
     <property name="homepage" value="http://one2team.ru/projects/Codeine"/>
     <property name="maintainer" value="Johnny Funt"/>
@@ -26,13 +17,13 @@
     <target name="phase2" depends="phase1, check"></target>
 
     <!-- Tests & docs -->
-    <target name="phase3" depends="phase2, test"></target>
+    <target name="phase3" depends="phase2"></target>
 
     <!-- Metrics -->
-    <target name="phase4" depends="phase3, phploc"></target>
+    <target name="phase4" depends="phase3"></target>
 
     <!-- Packaging -->
-    <target name="phase5" depends="phase4, tarball.make, debian.make"></target>
+    <target name="phase5" depends="phase4, debian.make"></target>
 
 
     <target name="final" depends="phase5"></target>
