#803 fixed PDO Small bugfixes

--- a/src/Options/Code/Flow/Application.json
+++ b/src/Options/Code/Flow/Application.json
@@ -4,7 +4,11 @@
     {
         "beforeApplicationRun":
         {
-
+            "Audit":
+            {
+                "Service": "Security.Auth",
+                "Method": "Audit"
+            },
             "Access":
             {
                 "Service": "Code.Flow.Front.Access",
