Codeine Tool proto

--- a/etc/nginx/sites-available/development.conf
+++ b/etc/nginx/sites-available/development.conf
@@ -9,34 +9,27 @@ server {
 		try_files $uri $uri/ /index.php?$uri&$args;
 	}
 
-    gzip on;
-	gzip_comp_level 6;
-    gzip_proxied any;
-    gzip_http_version 1.0;
-    gzip_types text/plain text/xml application/xml application/x-javascript text/javascript text/css text/json;
-    gzip_vary on;
-
-	location ~ .php$ {
-
-		# fastcgi_split_path_info ^(.+\.php)(.*)$;
+  	location ~ .php$
+  	{
+        fastcgi_param  Environment Development;
 
 		fastcgi_pass   127.0.0.1:9000;
 		fastcgi_index  index.php;
 
-		fastcgi_param  DOCUMENT_ROOT    /usr/share/php/Codeine/Public;
-		fastcgi_param  SCRIPT_FILENAME  /usr/share/php/Codeine/Public/index.php;
-		fastcgi_param  PATH_TRANSLATED  /usr/share/php/Codeine/Public/index.php;
-
 		include fastcgi_params;
+
+		fastcgi_param  DOCUMENT_ROOT    $document_root;
+		fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+		fastcgi_param  PATH_TRANSLATED  $document_root$fastcgi_script_name;
+
 		fastcgi_param  QUERY_STRING     $query_string;
-		fastcgi_param  SPCTTL     0;
-		fastcgi_param  Environment Development;
 		fastcgi_param  REQUEST_METHOD   $request_method;
 		fastcgi_param  CONTENT_TYPE     $content_type;
 		fastcgi_param  CONTENT_LENGTH   $content_length;
 
 		fastcgi_intercept_errors        on;
 		fastcgi_ignore_client_abort     off;
+
 		fastcgi_connect_timeout 60;
 		fastcgi_send_timeout 180;
 		fastcgi_read_timeout 180;
@@ -60,14 +53,6 @@ server {
 	location ~ /\.ht {
 		deny  all;
 	}
-
-	location ~ /assets/(.*)\.(jpg|jpeg|gif|png|woff|ttf)$
-    {
-        root /var/www/codeine.local;
-        expires           max;
-		add_header    Cache-Control  public;
-		rewrite ^/assets/(.*)$ /Assets/$1 break;
-    }
 
     location ~* \.(jpg|jpeg|gif|css|png|js|ico|html|woff|eot)$
 	{
